[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/helpers/LevelMenu.gd" type="Script" id=2]

[node name="LevelMenuLayer" type="CanvasLayer"]

[node name="LevelMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="LevelMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
text = "Resume"

[node name="RestartButton" type="Button" parent="LevelMenu/VBoxContainer"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 35 )
text = "Restart level"

[node name="MainMenuButton" type="Button" parent="LevelMenu/VBoxContainer"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 35 )
text = "Main menu"

[connection signal="pressed" from="LevelMenu/VBoxContainer/ResumeButton" to="LevelMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="LevelMenu/VBoxContainer/RestartButton" to="LevelMenu" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LevelMenu/VBoxContainer/MainMenuButton" to="LevelMenu" method="_on_MainMenuButton_pressed"]
